# gr-dvbt2rx

./: .gitignore  CMakeLists.txt  MANIFEST.md
cmake/Modules/: dvbt2rxConfig.cmake
docs/: README.dvbt2rx
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: P1_detection_test.grc  old_P1_detection_test.grc  old_testp1detector.grc  t2_test_p1_detector.grc  top_block.py
examples/hier blocks/: t2_p1_correlator.grc  t2_p1_detector.grc
grc/: CMakeLists.txt  dvbt2rx_gi_est_control_cc.xml  dvbt2rx_gi_est_decider.xml  dvbt2rx_gi_est_decider_b.xml  dvbt2rx_p1_demod.xml
include/dvbt2rx/: CMakeLists.txt  api.h  gi_est_control_cc.h  gi_est_decider.h  gi_est_decider_b.h  p1_demod.h  t2common.h
lib/: CMakeLists.txt  gi_est_control_cc_impl.cc  gi_est_control_cc_impl.h  gi_est_decider_b_impl.cc  gi_est_decider_b_impl.h  gi_est_decider_impl.cc  gi_est_decider_impl.h  p1_demod_impl.cc  p1_demod_impl.h  qa_dvbt2rx.cc  qa_dvbt2rx.h  t2common.cc  t2common.h  test_dvbt2rx.cc
python/: CMakeLists.txt  __init__.py  qa_gi_est_control_cc.py  qa_gi_est_decider.py  qa_gi_est_decider_b.py  qa_p1_demod.py
swig/: CMakeLists.txt  dvbt2rx_swig.i
